--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <div>-----</div>
 <br />
 <div id="chute"></div><script>var b=document.createElement('iframe');b.setAttribute('allowfullscreen','true');b.setAttribute('width','640');b.setAttribute('height','360');b.setAttribute('src','https://cd05.bitchute.com/embed/-5zHKGl2XOI');b.setAttribute('frameborder','0');document.getElementById('chute').appendChild(b);</script>
+<div>-----</div>
+<br />
+<iframe allowfullscreen style="border: none; width:100%; aspect-ratio:16 / 9;" scrolling="no" frameborder="0" src="https://www.bitchute.com/embed/LyoA2Amj84qR"></iframe>
+<br />
+<div>-----</div>
+<br />
+<div id="chute2"></div><script>var b=document.createElement('iframe');b.setAttribute('allowfullscreen','true');b.setAttribute('width','640');b.setAttribute('height','360');b.setAttribute('src','https://www.bitchute.com/embed/LyoA2Amj84qR');b.setAttribute('frameborder','0');document.getElementById('chute2').appendChild(b);</script>
 </body>
 </html>
 ~        
